--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -16,6 +16,8 @@
   <properties>
     <java.version>17</java.version>
     <kotlin.version>1.9.24</kotlin.version>
+    <spring-boot.run.main-class>com.example.flowtask.FlowTaskApplicationKt</spring-boot.run.main-class>
+    <start-class>com.example.flowtask.FlowTaskApplicationKt</start-class>
   </properties>
 
   <dependencies>
