--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,17 +1,19 @@
 spring:
-  datasource:
-    url: jdbc:h2:file:./data/flowtask;MODE=PostgreSQL;DATABASE_TO_UPPER=false
-    driver-class-name: org.h2.Driver
-    username: sa
-    password: ""
-  h2:
-    console:
-      enabled: true
-  flyway:
-    enabled: true
-    locations: classpath:db/migration
-  jackson:
-    serialization:
-      write-dates-as-timestamps: false
+    servlet:
+        multipart:
+            max-file-size: 50MB # 单个文件最大 50MB
+            max-request-size: 100MB # 一次请求总大小最大 100MB
+    datasource:
+        type: com.zaxxer.hikari.HikariDataSource
+        url: jdbc:mysql://127.0.0.1:3306/flow_task?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=GMT%2b8
+        username: root
+        password: adtkb12Sun
+    flyway:
+        baseline-version: 1
+        baseline-on-migrate: true
+        url: jdbc:mysql://127.0.0.1:3306/flow_task?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=GMT%2b8
+        user: root
+        password: adtkb12Sun
+        locations: classpath:db/migration/mysql
 server:
-  port: 8080
+    port: 8080
